Changed: project title

--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html data-wf-page="6563668963a70790e8485dae" data-wf-site="6563668963a70790e8485dad" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Flatrate.Design - Get unlimited designs for a fixed price per month.</title>
+  <title>Lucy Hunter - Creative AI/ML Engineer</title>
   <meta content="Flatrate.Design replaces unreliable freelancers and expensive agencies with a fixed monthly fee. A design flat rate, subscription or package for graphic design of any kind billed at a flat rate. Comprehensive design, whether web design, web development with Webflow, flyers, brochures, billboards, SEO, social media, logo design, branding, video editing, photo retouching, print, business cards, stationery or advertising boards content. We do everything" name="description">
   <meta content="Flatrate.Design - Get unlimited designs for a fixed price per month." property="og:title">
   <meta content="Flatrate.Design replaces unreliable freelancers and expensive agencies with a fixed monthly fee. A design flat rate, subscription or package for graphic design of any kind billed at a flat rate. Comprehensive design, whether web design, web development with Webflow, flyers, brochures, billboards, SEO, social media, logo design, branding, video editing, photo retouching, print, business cards, stationery or advertising boards content. We do everything" property="og:description">
@@ -46,36 +46,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <body>
   <div class="cookie">
-    <div fs-cc="banner" class="fs-cc-banner_component">
-      <div class="fs-cc-banner_container">
-        <div class="fs-cc-banner_text">By clicking on <strong>“Allow everything”</strong> click, agree to the storage of cookies on your device to improve site navigation, analyze website usage, and support our marketing efforts. For more information, please see our <a href="#">Privacy Policy</a>.<br></div>
-        <div class="fs-cc-banner_buttons-wrapper">
-          <div fs-cc="close" class="fs-cc-banner_close">
-            <div class="fs-cc-banner_close-icon w-embed"><svg fill="currentColor" aria-hidden="true" focusable="false" viewbox="0 0 16 16">
-                <path d="M9.414 8l4.293-4.293-1.414-1.414L8 6.586 3.707 2.293 2.293 3.707 6.586 8l-4.293 4.293 1.414 1.414L8 9.414l4.293 4.293 1.414-1.414L9.414 8z"></path>
-              </svg></div>
-          </div>
-          <div href="#Preise" fs-cc="allow" class="button text-small">
-            <div class="label">Allow everything</div>
-            <div class="label second">Allow everything</div>
-            <div class="bt_bg"></div>
-          </div>
-          <div href="#Preise" fs-cc="deny" class="button text-small">
-            <div class="label">only essentials</div>
-            <div class="label second">only essentials</div>
-            <div class="bt_bg"></div>
-          </div>
-          <a fs-cc="open-preferences" href="#" class="fs-cc-banner_text-link">Settings</a>
-        </div>
-      </div>
-      <div fs-cc="interaction" class="fs-cc-banner_trigger"></div>
-    </div>
-    <div fs-cc="manager" class="fs-cc-manager_component">
-      <div fs-cc="open-preferences" class="fs-cc-manager_button">
-        <div>Cookies</div>
-      </div>
-      <div fs-cc="interaction" class="fs-cc-manager_trigger"></div>
-    </div>
     <div fs-cc-scroll="disable" fs-cc="preferences" class="fs-cc-prefs_component w-form">
       <div fs-cc="close" class="fs-cc-prefs_close">
         <div class="fs-cc-prefs_close-icon w-embed"><svg fill="currentColor" aria-hidden="true" focusable="false" viewbox="0 0 16 16">
@@ -165,7 +135,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div data-w-id="a7470398-3242-8ddb-01af-cf9d35359611" class="hero-text-bottom">
           <div class="hero-text">
             <div class="strapline-copy">
-              <div>*No Contracts. No hourly payment.<strong> 100% flat rate</strong><br>*pause anytime or cancel monthly!</div>
+              <div>Hello, everybody👋. My name is <strong>Lucy Hunter</strong><br>I am an innovative <strong>AI/ML Engineer </strong>specializing in scalable AI solutions and deep learning.</div>
             </div>
           </div>
         </div>
@@ -173,7 +143,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div data-w-id="02703750-028b-18eb-f290-f76257a3e876" class="a0 b"><img src="images/hero_6hero_3.webp" loading="eager" width="1250" sizes="100vw" alt="" srcset="images/hero_6-p-500.png 500w, images/hero_6-p-800.png 800w, images/hero_6-p-1080.png 1080w, images/hero_6-p-1600.png 1600w, images/hero_6-p-2000.png 2000w, images/hero_6hero_3.webp 2500w" class="down _6"></div>
         <div data-w-id="24c8f590-c2f8-aa50-7591-228e31c10f69" class="hero-text-top">
           <div class="hero-top">
-            <h1 class="h3">Get <span class="text-color-funky">unlimited </span>designs<br>at a fixed price per month.</h1>
+            <h1 class="h3">Creative <span class="text-color-funky">AI/ML Engineer </span><br>with 8+ years in delivering AI solutions</h1>
           </div>
         </div>
         <div data-w-id="fcd77998-15cb-1836-32b4-e42d9dd89b44" class="a0 w"><img src="images/hero_9hero_4.webp" loading="eager" width="1250" sizes="100vw" alt="" srcset="images/hero_9-p-500.png 500w, images/hero_9-p-800.png 800w, images/hero_9-p-1080.png 1080w, images/hero_9-p-1600.png 1600w, images/hero_9-p-2000.png 2000w, images/hero_9hero_4.webp 2500w" class="down"></div>
