Updated: title for AI/ML

--- a/index.htm
+++ b/index.htm
@@ -135,7 +135,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div data-w-id="a7470398-3242-8ddb-01af-cf9d35359611" class="hero-text-bottom">
           <div class="hero-text">
             <div class="strapline-copy">
-              <div>Hello, everybody👋. My name is <strong>Lucy Hunter</strong><br>I am an innovative <strong>AI/ML Engineer </strong>specializing in scalable AI solutions and deep learning.</div>
+              <div>Hello👋, I am  <strong><span style="font-size: 1.8rem;">Lucy Hunter</span></strong> .<br>Proficient in <strong><u>Agentic AI / Generative AI / Edge AI / Personalized AI / Automation with AI</u></strong></div>
             </div>
           </div>
         </div>
