Updated: work history

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-wf-page="6563668963a70790e8485dae" data-wf-site="6563668963a70790e8485dad" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Victor Stark - Creative AI/ML Engineer</title>
+  <title>Viktor Stark - Creative AI/ML Engineer</title>
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
   <link href="css/flatratedesign.css" rel="stylesheet" type="text/css">
@@ -140,7 +140,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div data-w-id="a7470398-3242-8ddb-01af-cf9d35359611" class="hero-text-bottom">
           <div class="hero-text">
             <div class="strapline-copy">
-              <div>Hello👋, I am  <strong><span style="font-size: 1.8rem;">Victor Stark</span></strong> .<br>Proficient in <strong><u>Agentic AI / Generative AI / Edge AI / Personalized AI / Automation with AI</u></strong></div>
+              <div>Hello👋, I am  <strong><span style="font-size: 1.8rem;">Viktor Stark</span></strong> .<br>Proficient in <strong><u>Agentic AI / Generative AI / Edge AI / Personalized AI / Automation with AI</u></strong></div>
             </div>
           </div>
         </div>
@@ -176,6 +176,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <a href="#Recent-Works" class="menu_link w-inline-block">
                   <div>Recent Works</div>
                 </a>
+                <a href="#Work-History" class="menu_link w-inline-block">
+                  <div>History</div>
+                </a>
               </div>
             </div>
             <div class="desktop-nav-wrapper">
@@ -198,6 +201,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   </a>
                   <a href="#Recent-Works" class="menu_link w-inline-block">
                     <div>Recent Works</div>
+                  </a>
+                  <a href="#Work-History" class="menu_link w-inline-block">
+                    <div>History</div>
                   </a>
                 </div>
               </div>
@@ -5500,15 +5506,34 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
       </section>
-      <section data-w-id="264f5496-a0e5-3f5d-79b9-a96626d85652" class="section bg_fill overlay_top">
+      
+      <section data-w-id="f9050369-c9f3-e041-9d1b-631967d3992f" class="section-full padding-large space">
+        <div class="floating-wrapper _1">
+          <div class="floating-cards"><img src="images/behance_3behance_2.webp" loading="lazy" sizes="(max-width: 1200px) 100vw, 1200px" srcset="images/behance_3-p-500.jpg 500w, images/behance_3-p-800.jpg 800w, images/behance_3-p-1080.jpg 1080w, images/behance_3behance_2.webp 1200w" alt="Myriad Pro Broschüre" class="_100 top2"></div>
+          <div class="floating-cards"><img src="images/Portfolio_2Portfolio_01.webp" loading="lazy" sizes="(max-width: 1200px) 100vw, 1200px" srcset="images/Portfolio_2-p-500.jpg 500w, images/Portfolio_2-p-800.jpg 800w, images/Portfolio_2-p-1080.jpg 1080w, images/Portfolio_2Portfolio_01.webp 1200w" alt="Portfolio, Screenshot von einer Webseite, Studio Bruch Architekten" class="_100"></div>
+          <div class="floating-cards"><img src="images/portfolio_1portfolio.webp" loading="lazy" sizes="(max-width: 1200px) 100vw, 1200px" srcset="images/portfolio_1-p-500.jpg 500w, images/portfolio_1-p-800.jpg 800w, images/portfolio_1-p-1080.jpg 1080w, images/portfolio_1portfolio.webp 1200w" alt="pauschal.design Website" class="_100 top"></div>
+          <div class="floating-cards"><img src="images/Portfolio_3Portfolio_02.webp" loading="lazy" sizes="(max-width: 1200px) 100vw, 1200px" srcset="images/Portfolio_3-p-500.jpg 500w, images/Portfolio_3-p-800.jpg 800w, images/Portfolio_3-p-1080.jpg 1080w, images/Portfolio_3Portfolio_02.webp 1200w" alt="3 Telefone von die eine mobile Webseite zeigen" class="_100 too"></div>
+          <div class="floating-cards"><img src="images/Mascha_7Mascha_5.webp" loading="lazy" sizes="(max-width: 2500px) 100vw, 2500px" srcset="images/Mascha_7-p-500.jpg 500w, images/Mascha_7-p-800.jpg 800w, images/Mascha_7-p-1080.jpg 1080w, images/Mascha_7-p-1600.jpg 1600w, images/Mascha_7-p-2000.jpg 2000w, images/Mascha_7Mascha_5.webp 2500w" alt="Screenshot einer Webseite, Internetseite. Mascha &amp; Rosskopf" class="_100"></div>
+          <div class="floating-cards"><img src="images/Mascha_8Mascha_6.webp" loading="lazy" sizes="(max-width: 2500px) 100vw, 2500px" srcset="images/Mascha_8-p-500.jpg 500w, images/Mascha_8-p-800.jpg 800w, images/Mascha_8-p-1080.jpg 1080w, images/Mascha_8-p-1600.jpg 1600w, images/Mascha_8-p-2000.jpg 2000w, images/Mascha_8Mascha_6.webp 2500w" alt="Website von Mascha &amp; Rosskopf" class="_100"></div>
+        </div>
+        <div class="floating-wrapper _2">
+          <div class="floating-cards"><img src="images/Portfolio_5Portfolio_04.webp" loading="lazy" sizes="(max-width: 1200px) 100vw, 1200px" srcset="images/Portfolio_5-p-500.jpg 500w, images/Portfolio_5-p-800.jpg 800w, images/Portfolio_5-p-1080.jpg 1080w, images/Portfolio_5Portfolio_04.webp 1200w" alt="Aufgeklapptes Buch Design &amp; Brand Guideline" class="_100 top2"></div>
+          <div class="floating-cards"><img src="404.html" loading="lazy" sizes="(max-width: 2730px) 100vw, 2730px" srcset="images/Grafik-Design-Kempten-Allga%CC%88u-Webseite-Viktor-Stark-thisisstark-2_1-p-500.jpg 500w, images/Grafik-Design-Kempten-Allga%CC%88u-Webseite-Viktor-Stark-thisisstark-2_1-p-800.jpg 800w, images/Grafik-Design-Kempten-Allga%CC%88u-Webseite-Viktor-Stark-thisisstark-2_1-p-1080.jpg 1080w, images/Grafik-Design-Kempten-Allga%CC%88u-Webseite-Viktor-Stark-thisisstark-2_1-p-1600.jpg 1600w, images/Grafik-Design-Kempten-Allga%CC%88u-Webseite-Viktor-Stark-thisisstark-2_1-p-2000.jpg 2000w, images/Grafik-Design-Kempten-Allga%CC%88u-Webseite-Viktor-Stark-thisisstark-2_1-p-2600.jpg 2600w, 404.html 2730w" alt="Verpackungs- und Broschürendesign" class="_100"></div>
+          <div class="floating-cards"><img src="images/Portfolio_4Portfolio_03.webp" loading="lazy" sizes="(max-width: 1200px) 100vw, 1200px" srcset="images/Portfolio_4-p-500.jpg 500w, images/Portfolio_4-p-800.jpg 800w, images/Portfolio_4-p-1080.jpg 1080w, images/Portfolio_4Portfolio_03.webp 1200w" alt="Screenshot einer Website - SnapStudios" class="_100 top"></div>
+          <div class="floating-cards"><img src="images/725shots_so_1725shots_so.webp" loading="lazy" sizes="(max-width: 1920px) 100vw, 1920px" srcset="images/725shots_so_1-p-500.jpg 500w, images/725shots_so_1-p-800.jpg 800w, images/725shots_so_1-p-1080.jpg 1080w, images/725shots_so_1-p-1600.jpg 1600w, images/725shots_so_1725shots_so.webp 1920w" alt="Macbook mit einer Webseite Internetseite die offen ist. Studio Bruch Architekten" class="_100 top"></div>
+          <div class="floating-cards"><img src="images/264shots_so_1264shots_so.webp" loading="lazy" sizes="(max-width: 1080px) 100vw, 1080px" srcset="images/264shots_so_1-p-500.jpg 500w, images/264shots_so_1-p-800.jpg 800w, images/264shots_so_1264shots_so.webp 1080w" alt="Screenshot einer Webseite, Internetseite. Studio Bruch Architekten" class="_100 top"></div>
+          <div class="floating-cards"><img src="images/behance_1behance.webp" loading="lazy" sizes="(max-width: 1200px) 100vw, 1200px" srcset="images/behance_1-p-500.jpg 500w, images/behance_1-p-800.jpg 800w, images/behance_1-p-1080.jpg 1080w, images/behance_1behance.webp 1200w" alt="Myriad Pro Broschüre" class="_100"></div>
+        </div>
+      </section>
+
+      <section id="Work-History" data-w-id="264f5496-a0e5-3f5d-79b9-a96626d85652" class="section bg_fill overlay_top">
         <div class="padding-global">
           <div class="container-large">
             <div class="flex-vertical span">
               <div class="header-left">
-                <div data-w-id="264f5496-a0e5-3f5d-79b9-a96626d85657" style="opacity:0" class="topline">process</div>
-                <h2 class="h4 text-color-funky">Success in 3 steps!<br></h2>
+                <div data-w-id="264f5496-a0e5-3f5d-79b9-a96626d85657" style="opacity:0" class="topline">work history</div>
                 <div class="strapline">
-                  <div class="text-size-medium text-weight-semibold text-color-grey">The revolution in design. We&#x27;re making it easy. Forget what you know about<span class="text-color-white"> web design, logo design</span> or <span class="text-color-white">branding</span> - this is something completely different and new.</div>
+                  <div class="text-size-medium text-weight-semibold text-color-grey text-color-funky">8+ Years of Experience</br>100+ Successfully Delivered AI/ML Projects</br>Collaborated with 40+ Satisfied Clients</br></div>
                 </div>
               </div>
             </div>
@@ -5534,13 +5559,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="timeline7_item">
                     <div class="timeline7_content">
                       <div class="margin-bottom margin-xsmall">
-                        <div data-w-id="9084d676-8b29-a6a0-cabb-4ee8dc61dd93" style="opacity:0" class="topline">1. Step</div>
+                        <div data-w-id="9084d676-8b29-a6a0-cabb-4ee8dc61dd93" style="opacity:0" class="topline">📅12/2024-07/2025 Sparc Edu Tech</br>California, United States</div>
                       </div>
                       <div class="margin-bottom margin-xsmall">
-                        <h3 class="h5-2">Choose a plan!<br></h3>
+                        <h3 class="h5-2">AI Engineer<br></h3>
                       </div>
                       <div class="strapline">
-                        <div class="text-size-medium text-weight-semibold text-color-grey"><span class="text-color-white">It&#x27;s as simple as that.</span> Start with a monthly subscription, without any obligations. You can anytime <span class="text-color-white">pause</span> or <span class="text-color-white">resign. </span>Welcome to the world of <span class="text-color-white">Design flat rates.</span></div>
+                        <div class="text-size-medium text-weight-semibold text-color-grey">
+                          Developed and deployed <span class="text-color-white">AI Voice Agents</span> by integrating <span class="text-color-white">LLM, STT & TTS</span> technologies. Also implemented <span class="text-color-white">AI Chatbots</span> for various websites and built <span class="text-color-white">AI Call Agents</span> using <span class="text-color-white">Retell AI & Vapi</span>.
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -5552,13 +5579,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="timeline7_item">
                     <div class="timeline7_content">
                       <div class="margin-bottom margin-xsmall">
-                        <div data-w-id="9084d676-8b29-a6a0-cabb-4ee8dc61ddac" style="opacity:0" class="topline">2. Step</div>
+                        <div data-w-id="9084d676-8b29-a6a0-cabb-4ee8dc61ddac" style="opacity:0" class="topline">📅04/2022-10/2024 TechNow IO</br>Berlin, Germany</div>
                       </div>
                       <div class="margin-bottom margin-xsmall">
-                        <h3 class="h5-2">Join Trello and start making inquiries.<br></h3>
+                        <h3 class="h5-2">Senior Software Engineer<br></h3>
                       </div>
                       <div class="strapline">
-                        <div class="text-size-medium text-weight-semibold text-color-grey">We deliver <span class="text-color-white">fast</span> and <span class="text-color-white">without compromises</span>. Expect a turnaround time of <span class="text-color-white">2-3 days</span> from Monday to Friday. Whether for social media, flyers or brochures.</div>
+                        <div class="text-size-medium text-weight-semibold text-color-grey">
+                          Developed <span class="text-color-white">Affective-Computing AI models</span> that integrate expert knowledge and intuition, optimized via <span class="text-color-white">Fine-Tuning</span>, and enhanced with <span class="text-color-white">AI Chatbots</span> for various websites and built <span class="text-color-white">Hugging Face NLP and Reinforcement Learning</span>.
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -5570,13 +5599,35 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div class="timeline7_item">
                     <div class="timeline7_content">
                       <div class="margin-bottom margin-xsmall">
-                        <div data-w-id="9084d676-8b29-a6a0-cabb-4ee8dc61ddc4" style="opacity:0" class="topline">3. Step</div>
+                        <div data-w-id="9084d676-8b29-a6a0-cabb-4ee8dc61ddac" style="opacity:0" class="topline">📅07/2019-02/2022 Benefit Tech</br>Frankfurt, Germany</div>
                       </div>
                       <div class="margin-bottom margin-xsmall">
-                        <h3 class="h5-2">Design in a nutshell<br></h3>
+                        <h3 class="h5-2">Senior Full Stack Developer<br></h3>
                       </div>
                       <div class="strapline">
-                        <div class="text-size-medium text-weight-semibold text-color-grey">And that was it! <span class="text-color-white">You&#x27;ll love it!</span> From logo design to complete branding projects, we&#x27;ve got you covered. </div>
+                        <div class="text-size-medium text-weight-semibold text-color-grey">
+                          Enhanced <span class="text-color-white">PoC</span> for scalable text (GPT-3) and image (BigGAN/DALL·E) generation, improved <span class="text-color-white">NLP tools to cut content creation time by 30%</span>, and optimized AI/ML deployment for <span class="text-color-white">Edge Devices on NVIDIA Jetson Xavier NX</span>.
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="timeline7_row">
+                  <div class="timeline7_circle-wrapper">
+                    <div class="timeline7_circle"></div>
+                  </div>
+                  <div class="timeline7_item">
+                    <div class="timeline7_content">
+                      <div class="margin-bottom margin-xsmall">
+                        <div data-w-id="9084d676-8b29-a6a0-cabb-4ee8dc61ddc4" style="opacity:0" class="topline">📅10/2017-05/2019 Innoplexus</br>Frankfurt, Germany</div>
+                      </div>
+                      <div class="margin-bottom margin-xsmall">
+                        <h3 class="h5-2">Full Stack Developer<br></h3>
+                      </div>
+                      <div class="strapline">
+                        <div class="text-size-medium text-weight-semibold text-color-grey">
+                          Built an <span class="text-color-white">AI-powered chatbot</span> for open dataset queries <span class="text-color-white">(GPT-2, Elasticsearch, FAISS, TensorFlow, BERT)</span>, and engineered a <span class="text-color-white">hybrid optimization model (LNS + QUBO)</span> to boost retrieval accuracy and resource utilization efficiency. 
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -5586,6 +5637,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
       </section>
+      
     </main>
   </main>
   <footer class="footer">
@@ -5597,7 +5649,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="uui-container-large">
                 <div class="uui-padding-vertical-xlarge">
                   <div class="uui-logo_component">
-                    <div class="h4 text-align-center text-weight-bold">See for yourself whether<br><span class="text-color-funky text-weight-light">Victor Stark </span><span class="style-text">' services<br></span>is for you or not!<br>(definitely!)</div>
+                    <div class="h4 text-align-center text-weight-bold">See for yourself whether<br><h2 class="h4 text-align-center"><span class="text-color-funky">Viktor Stark' services</span></h2>is for you or not!<br>(definitely!)</div>
                   </div>
                   <div class="uui-footer07_top-wrapper">
                     <div class="strapline text-align-center">
@@ -5617,10 +5669,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                       <a href="#Recent-Works" class="uui-footer01_link w-inline-block">
                         <div>Recent Works</div>
                       </a>
+                      <a href="#Work-History" class="menu_link w-inline-block">
+                        <div>History</div>
+                      </a>
                     </div>
                   </div>
                   <div class="uui-footer07_bottom-wrapper">
-                    <div class="uui-text-size-small-2 text-color-gray500">© 2025 flatrate.design<br>Made for your 👵 by <a href="https://www.by-stark.de" class="link-text"><strong>Viktor Stark</strong></a>
+                    <div class="uui-text-size-small-2 text-color-gray500">© 2025 Made for your 👵 by <a href="https://www.by-stark.de" class="link-text"><strong>Viktor Stark</strong></a>
                     </div>
                   </div>
                 </div>
