Updated: service menu part

--- a/index.htm
+++ b/index.htm
@@ -1498,43 +1498,46 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                   <div data-current="Brand identity &amp; guidelines" data-easing="ease" data-duration-in="300" data-duration-out="100" class="tabs-second w-tabs">
                     <div class="tabs-menue-second w-tab-menu">
                       <a data-w-tab="Brand identity &amp; guidelines" class="tab-link-second w-inline-block w-tab-link w--current">
-                        <div class="tab-link-second-text">Brand identity &amp; guidelines<br></div>
+                        <div class="tab-link-second-text">AI Voice & Call Agent Development<br></div>
                       </a>
                       <a data-w-tab="Logo design" class="tab-link-second w-inline-block w-tab-link">
-                        <div class="tab-link-second-text">Logo design</div>
+                        <div class="tab-link-second-text">AI-Powered Chatbots & Conversational Agents</div>
                       </a>
                       <a data-w-tab="Flyers &amp; brochures" class="tab-link-second w-inline-block w-tab-link">
-                        <div class="tab-link-second-text">Flyers &amp; brochures</div>
+                        <div class="tab-link-second-text">Machine Learning Model Development</div>
                       </a>
                       <a data-w-tab="Blockchain Development" class="tab-link-second w-inline-block w-tab-link">
-                        <div class="tab-link-second-text">Blockchain Development</div>
+                        <div class="tab-link-second-text">Natural Language Processing Solutions</div>
                       </a>
                       <a data-w-tab="AI-Driven Fashion Solutions" class="tab-link-second w-inline-block w-tab-link">
-                        <div class="tab-link-second-text">Businesscards</div>
+                        <div class="tab-link-second-text">Computer Vision & Image Processing</div>
                       </a>
                       <a data-w-tab="Menus" class="tab-link-second w-inline-block w-tab-link">
-                        <div class="tab-link-second-text">Menus</div>
+                        <div class="tab-link-second-text">AI Automation & Workflow Integration</div>
                       </a>
                       <a data-w-tab="Book covers" class="tab-link-second w-inline-block w-tab-link">
-                        <div class="tab-link-second-text">Book covers<br></div>
+                        <div class="tab-link-second-text">Cloud-Based AI & ML Deployment<br></div>
                       </a>
                       <a data-w-tab="Presentation design" class="tab-link-second w-inline-block w-tab-link">
-                        <div class="tab-link-second-text">Presentation design<br></div>
+                        <div class="tab-link-second-text">Full Stack Web Development<br></div>
                       </a>
                       <a data-w-tab="Social Media" class="tab-link-second w-inline-block w-tab-link">
-                        <div class="tab-link-second-text">Natural Language Processing</div>
+                        <div class="tab-link-second-text">Mobile App Development</div>
                       </a>
                       <a data-w-tab="Banner ads" class="tab-link-second w-inline-block w-tab-link">
-                        <div class="tab-link-second-text">Banner ads<br></div>
+                        <div class="tab-link-second-text">AI Model Optimization & Performance Tuning<br></div>
                       </a>
                       <a data-w-tab="Packaging design" class="tab-link-second w-inline-block w-tab-link">
-                        <div class="tab-link-second-text">Packaging design<br></div>
+                        <div class="tab-link-second-text">Backend API & Microservices Development<br></div>
                       </a>
                       <a data-w-tab="Email newsletter template" class="tab-link-second w-inline-block w-tab-link">
-                        <div class="tab-link-second-text">Email newsletter template<br></div>
+                        <div class="tab-link-second-text">Data Engineering & Database Management<br></div>
                       </a>
                       <a data-w-tab="Mockups" class="tab-link-second w-inline-block w-tab-link">
-                        <div class="tab-link-second-text">Mockups</div>
+                        <div class="tab-link-second-text">DevOps & Container Orchestration</div>
+                      </a>
+                      <a data-w-tab="Mockups" class="tab-link-second w-inline-block w-tab-link">
+                        <div class="tab-link-second-text">Blockchain Development & Web3 Integration</div>
                       </a>
                     </div>
                     <div class="tabs-content-second w-tab-content">
@@ -2700,7 +2703,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
       </section>
-      
+
       <section id="Recent-Works" class="section">
         <div class="padding-global">
           <div class="container-main">
